--- a/ckanext/tess/templates/user/dashboard.html
+++ b/ckanext/tess/templates/user/dashboard.html
@@ -13,13 +13,14 @@
     {% block page_header %}
       <header class="module-content page-header hug">
         <div class="content_action">
-          {% link_for _('Edit settings'), controller='user', action='edit', id=user.name, class_='btn', icon='cog' %}
+          {% link_for _('Manage my account'), controller='user', action='edit', id=user.name, class_='btn', icon='cog' %}
         </div>
         <ul class="nav nav-tabs">
           {{ h.build_nav_icon('user_dashboard', _('News feed')) }}
-          {{ h.build_nav_icon('user_dashboard_datasets', _('My training materials')) }}
-          {{ h.build_nav_icon('user_dashboard_organizations', _('My content providers')) }}
+          {{ h.build_nav_icon('user_dashboard_datasets', _('My materials')) }}
           {{ h.build_nav_icon('user_dashboard_groups', _('My packages')) }}
+          {{ h.build_nav_icon('user_dashboard_workflows', _('My workflows')) }}
+          {#{ h.build_nav_icon('user_dashboard_organizations', _('My content providers')) }#}
         </ul>
       </header>
     {% endblock %}
