--- a/ckanext/tess/templates/event/map.html
+++ b/ckanext/tess/templates/event/map.html
@@ -34,14 +34,12 @@
             var map;
             function initialize() {
                   var mapOptions = {
-                    zoom: 1,
-                    center: new google.maps.LatLng(-33.9, 151.2)
+                        zoom: 15,
+                        center: new google.maps.LatLng(events[0][0], events[0][1])
                     }
                     var map = new google.maps.Map(document.getElementById('map-canvas'),mapOptions);
                     setEvents(map, events);
             }
-
-
             events = [
             {% for event in c.events %}
                 [ {{event.get('latitude')}}, {{event.get('longitude')}} ],
@@ -49,6 +47,8 @@
             ]
 
             function setEvents(map, events){
+                var bounds = new google.maps.LatLngBounds();
+
                 for (var i = 0; i < events.length; i++) {
                     var e = events[i];
                     var myLatLng = new google.maps.LatLng(e[0], e[1]);
@@ -58,7 +58,9 @@
                         map: map,
                         title: 'HELLO'
                     })
+                     bounds.extend(marker.position);
                 }
+                map.fitBounds(bounds);
             }
             google.maps.event.addDomListener(window, 'load', initialize);
         </script>
