--- a/ckanext/tess/templates/event/map.html
+++ b/ckanext/tess/templates/event/map.html
@@ -1,27 +1,13 @@
-{% extends "page.html" %}
-
-{% block subtitle %}{{ _('Events') }}{% endblock %}
-
-{% block breadcrumb_content %}
-<li class="active">{% link_for _('Events'), controller='group', action='index' %}</li> /
-<li>Map</li>
-{% endblock %}
-
-{% block page_header %}{% endblock %}
-
-{% block page_primary_action %}
-    {% link_for _('Add event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
-{% endblock %}
+{% extends "event/read_base.html" %}
 
 {% block primary_content_inner %}
     {% block events_search_form %}
-        {% set sorting = [ (_('Date Earliest'), 'end asc'),
-                           (_('Date Latest'), 'end desc')] %}
+
         {% snippet 'snippets/search_form.html',     fields=[('category', c.category.lower()), ('include_expired', c.include_expired_events)],
                                             type=(c.category.lower() or 'event'),
                                             query=c.q,
-                                            sorting=sorting,
-                                            sorting_selected=c.sort_by_selected,
+                                            sorting=None,
+                                            sorting_selected=None,
                                             count=c.events_count,
                                             placeholder=_('Search Events...'),
                                             show_empty=request.params,
@@ -33,6 +19,7 @@
         <script>
             var map;
             function initialize() {
+                /* center on first event. Map center and zoom will reconfigure later (fitbounds method)*/
                   var mapOptions = {
                         zoom: 15,
                         center: new google.maps.LatLng(events[0][0], events[0][1])
@@ -68,14 +55,4 @@
             <div id="map-canvas" style="position:fixed; height: 1000px;"></div>
     {% endblock %}
 
-    {% block attribution %}
-        <p class="events-source-title"><strong>Source:</strong>
-        <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p>
-    {% endblock %}
-
-{% endblock %}
-
-{% block secondary_content %}
-    {% snippet "event/snippets/helper.html" %}
-    {% snippet "event/snippets/filters.html" %}
 {% endblock %}
