--- a/ckanext/tess/templates/event/read.html
+++ b/ckanext/tess/templates/event/read.html
@@ -1,18 +1,7 @@
-{% extends "page.html" %}
-
-{% block subtitle %}{{ _('Events') }}{% endblock %}
-
-{% block breadcrumb_content %}
-<li class="active">{% link_for _('Events'), controller='group', action='index' %}</li>
-{% endblock %}
-
-{% block page_header %}{% endblock %}
-
-{% block page_primary_action %}
-    {% link_for _('Add event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
-{% endblock %}
+{% extends "event/read_base.html" %}
 
 {% block primary_content_inner %}
+
     {% block events_search_form %}
         {% set sorting = [ (_('Date Earliest'), 'end asc'),
                            (_('Date Latest'), 'end desc')] %}
@@ -26,26 +15,16 @@
                                             show_empty=request.params,
                                             no_bottom_border=true
         %}
-
-    {% snippet "event/snippets/events_options.html" %}
     {% endblock %}
 
+
     {% block events_list %}
+        {% snippet "event/snippets/events_options.html" %}
         {% snippet "event/snippets/events_list.html", events=c.events %}
     {% endblock %}
 
     {% block page_pagination %}
         {{ c.page.pager() }}
     {% endblock %}
-
-    {% block attribution %}
-        <p class="events-source-title"><strong>Source:</strong>
-        <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p>
-    {% endblock %}
-
 {% endblock %}
 
-{% block secondary_content %}
-    {% snippet "event/snippets/helper.html" %}
-    {% snippet "event/snippets/filters.html" %}
-{% endblock %}
