Fixed position issues of new header

--- a/ckanext/tess/templates/event/map.html
+++ b/ckanext/tess/templates/event/map.html
@@ -14,7 +14,7 @@
                                             no_bottom_border=true
         %}
     {% endblock %}
-    {% block events_map %}
+    {% block events_display %}
         <script src="https://maps.googleapis.com/maps/api/js?v=3.exp"></script>
         <script>
             var map;
