--- a/ckanext/tess/templates/event/read_base.html
+++ b/ckanext/tess/templates/event/read_base.html
@@ -6,27 +6,45 @@
 <li class="active">{% link_for _('Events'), controller='group', action='index' %}</li>
 {% endblock %}
 
-{% block page_header %}{% endblock %}
+{% block page_header %}
+            <header class="module-content page-header">
+                <ul class="nav nav-tabs">
+                    {{ h.build_nav_icon('event', _('Grid View')) }}
+                    {{ h.build_nav_icon('map', _('Map View')) }}
+                </ul>
+            </header>
+{% endblock %}
 
 {% block page_primary_action %}
     {% link_for _('Add event'), controller='ckanext.tess.plugin:TeSSController', action='report_event', class_="btn btn-primary", icon="plus-sign-alt"%}
 {% endblock %}
 
-{% block primary_content %}
-    <header class="module-content page-header">
-        <ul class="nav nav-tabs">
-            {{ h.build_nav_icon('event', _('Grid View')) }}
-            {{ h.build_nav_icon('map', _('Map View')) }}
-        </ul>
-    </header>
+
 
     {% block primary_content_inner %}
-        {% block attribution %}
-            <p class="events-source-title"><strong>Source:</strong>
-            <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p>
-        {% endblock %}
+            {% block events_search_form %}
+                   {% set sorting = [ (_('Date Earliest'), 'end asc'),
+                                       (_('Date Latest'), 'end desc')] %}
+                   {% snippet 'snippets/search_form.html',     fields=[('category', c.category.lower()), ('include_expired', c.include_expired_events)],
+                                                        type=(c.category.lower() or 'event'),
+                                                        query=c.q,
+                                                        sorting=sorting,
+                                                        sorting_selected=c.sort_by_selected,
+                                                        count=c.events_count,
+                                                        placeholder=_('Search Events...'),
+                                                        show_empty=request.params,
+                                                        no_bottom_border=true
+                    %}
+            {% endblock %}
+
+            {% block events_display %}
+            {% endblock %}
+
+            {% block attribution %}
+                <p class="events-source-title"><strong>Source:</strong>
+                <a target="_blank" href="http://iann.pro"><img alt="iAnn" src="/images/iann_logo-32x30.png"/></a></p>
+            {% endblock %}
     {% endblock %}
-{% endblock %}
 
 {% block secondary_content %}
     {% snippet "event/snippets/helper.html" %}
