A bit of fiddling with events.

--- a/ckanext/tess/templates/event/snippets/events_item.html
+++ b/ckanext/tess/templates/event/snippets/events_item.html
@@ -73,7 +73,7 @@ Type - 'related', 'associated', or 'regular'/''/None
                 data-module-event_id="{{id}}"
                 data-module-event_url="{{link}}"
                 data-module-resource_id="{{c.pkg_dict.id}}"
-                data-module-key="{{c.key}}"> Associate with Material</button>
+                data-module-key="{{c.key}}">Associate with material</button>
     {% endif %}
 
     {% if expired %}
@@ -88,7 +88,7 @@ Type - 'related', 'associated', or 'regular'/''/None
                 data-module-event_id="{{id}}"
                 data-module-event_url="{{link}}"
                 data-module-resource_id="{{c.pkg_dict.id}}"
-                data-module-key="{{c.key}}"> Unassociate Event</button>
+                data-module-key="{{c.key}}">Unassociate event</button>
     {% endif %}
 
     </li>
