--- a/ckanext/tess/templates/event/read_base.html
+++ b/ckanext/tess/templates/event/read_base.html
@@ -9,7 +9,7 @@
 {% block page_header %}
             <header class="module-content page-header">
                 <ul class="nav nav-tabs">
-                    {{ h.build_nav_icon('event', _('Grid View')) }}
+                    {{ h.build_nav_icon('grid', _('Grid View')) }}
                     {{ h.build_nav_icon('map', _('Map View')) }}
                 </ul>
             </header>
