Fix for TESS-122: slightly shorter text for explaining what training materials are.

--- a/ckanext/tess/templates/package/search.html
+++ b/ckanext/tess/templates/package/search.html
@@ -18,14 +18,13 @@
         <p>
             {% trans %}
             <p>
-                A material in TeSS is a link to an accessible, online training material (such as a text, a presentation, a video),
-                existing elsewhere on the Web and sourced by a content provider,
-                along with description and other meta information (e.g. ontological categorization, keywords, etc.).
+            In the context of TeSS, materials are links to online training resources (presentations, videos, exercises, etc.) made available
+            by 3<sup>rd</sup> party content providers. TeSS harvests materials automatically, including descriptions and other relevant meta-data
+            (ontological categorisations, keywords, etc.).
             </p>
             <p>
-                Training materials in TeSS are automatically aggregated from content providers. Alternatively, they can also
-                be registered in TeSS manually. If you have a site containing training materials that you wish to be included
-                in TeSS please contact the TeSS team at <a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info </a> to arrange automated ingestion.
+                Materials can also be registered manually. If your Web site contains training materials that you wish to
+                include in TeSS, please contact the TeSS team (<a href="mailto:tess@elixir-uk.info">tess@elixir-uk.info </a>) for further details.
             </p>
             {% endtrans %}
         </p>
