--- a/ckanext/tess/templates/workflow/snippets/display_workflow.html
+++ b/ckanext/tess/templates/workflow/snippets/display_workflow.html
@@ -34,6 +34,7 @@
 </div>
 
 <input type='text' id="node-info" class="hidden"/>
+<input type='text' id="workflow-id" class="hidden" value="{{c.workflow_dict.id}}"/>
 
 
 <script>
