--- a/ckanext/tess/templates/workflow/ajax/read_training.html
+++ b/ckanext/tess/templates/workflow/ajax/read_training.html
@@ -47,6 +47,7 @@
  /*   populateModal();*/
 
     $('.add_to_package').click(function(){
+        $('#myModal').hide();
        var select_id = $(this).data('id');
        var selected = $('#field-add_group-' + select_id).find(':selected')
        var data_dict = {
@@ -67,7 +68,12 @@
             data: JSON.stringify(data_dict),
             success: function (result_hash) {
                 if (result_hash['success'] == true) {
-                   $('#myModal').modal('hide');
+                   var modal_url = $('#open_modal_url');
+                    $('#modal_container').load('/workflow_modal.html');
+                    console.log(modal_url);
+                    $("#myModal").modal({
+                        remote: modal_url
+                    });
                 } else {
                     console.log('Error, could not associate event')
                 }
@@ -80,6 +86,8 @@
 </script>
 
 {% import 'macros/form.html' as form %}
+<input type="hidden" value="{{open_modal_url}}" id="open_modal_url">
+
 <div>
     <h3>Description</h3>
     {% if c.node.get('description') %}
